--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js production=true",
     "dev": "node server.js",
     "build": "rm -rf public && cp -pr views/ public && webpack",
-    "test": "karma start"
+    "test": "karma start",
+    "postinstall": "build"
   },
   "author": "",
   "license": "ISC",
